; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_load_gpos_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_load_gpos_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GDI_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Loaded GPOS table of %i bytes\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @load_gpos_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @load_gpos_table(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32* null, i32** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @MS_MAKE_TAG(i8 signext 71, i8 signext 80, i8 signext 79, i8 signext 83)
  %7 = call i32 @GetFontData(i32 %5, i32 %6, i32 0, i32* null, i32 0)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @GDI_ERROR, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %21

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = call i32* @heap_alloc(i32 %12)
  store i32* %13, i32** %3, align 8
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @MS_MAKE_TAG(i8 signext 71, i8 signext 80, i8 signext 79, i8 signext 83)
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @GetFontData(i32 %14, i32 %15, i32 0, i32* %16, i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @TRACE(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %11, %1
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

declare dso_local i32 @GetFontData(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @MS_MAKE_TAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i32* @heap_alloc(i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
